--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="hero-content centered">
                 <h1>Forex Plug System Evolution</h1>
-                <p>Experience our super sleek and futuristic trading solution for Metatrader. Our Linear Regression combined with Support and Resistance & ATR strategy has zero repaint logic displaying buy and sell setups including targets with simple time-efficient trading using our mechanical entry models.</p>
+                <p>Experience our super sleek and futuristic trading solution for Metatrader. Our Linear Regression combined with Maximum Deviation Support and Resistance & ATR strategy has zero repaint logic displaying buy and sell setups including targets with simple time-efficient trading using our mechanical entry models.</p>
                 <div class="cta-buttons">
                     <a href="#pricing" class="btn btn-primary">Get Access Now</a>
                     <a href="#trade-anatomy" class="btn btn-secondary">Explore Features</a>
