--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 <p>Join our community of successful traders and get direct access to our team</p>
                 
                 <div class="contact-buttons-large">
-                    <a href="https://t.me/forexplugsystem" target="_blank" class="contact-btn telegram-btn">
+                    <a href="https://t.me/officialforexplug" target="_blank" class="contact-btn telegram-btn">
                         <i class="fab fa-telegram-plane"></i>
                         <div class="btn-text">
                             <span class="btn-title">Chat on Telegram</span>
@@ -93,7 +93,7 @@
                     <h3>Connect With Us</h3>
                     <p><i class="fas fa-envelope"></i> support@forexplug.com</p>
                     <div class="contact-buttons">
-                        <a href="https://t.me/forexplugsystem" target="_blank" class="contact-btn telegram-btn">
+                        <a href="https://t.me/officialforexplug" target="_blank" class="contact-btn telegram-btn">
                             <i class="fab fa-telegram-plane"></i> Chat on Telegram
                         </a>
                         <a href="https://www.instagram.com/forexplugsystem/" target="_blank" class="contact-btn instagram-btn">
@@ -104,13 +104,13 @@
                 <div class="footer-newsletter">
                     <h3>Telegram Community</h3>
                     <p>Join our official Telegram channel for exclusive trading signals, market insights, and community support.</p>
-                    <a href="https://t.me/forexplugsystem" target="_blank" class="btn btn-primary telegram-btn">
+                    <a href="https://t.me/forexplugpublic" target="_blank" class="btn btn-primary telegram-btn">
                         <i class="fab fa-telegram-plane"></i> Join Telegram Channel
                     </a>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Forex Plug System. All rights reserved.</p>
+                <p>&copy; 2025 Forex Plug System. All rights reserved.</p>
                 <div class="footer-bottom-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
